# price_tracker

./: .gitignore  Cargo.toml  ReadMe.md  expected_format.txt  prices.txt
.github/workflows/: rust.yml
mock/: rarities.json  supertypes.json  types.json  xy1-1.json
set_mappings/: sv_set_mappings.json  swsh_set_mappings.json
src/: main.rs
src/cli/: cli.rs
src/client/: client.rs
src/mock/: card.json  sets.json  subtypes.json  xy1.json
src/models/: cards.rs  errors.rs  models.rs
